--- a/voredition.tex
+++ b/voredition.tex
@@ -1,3 +1,101 @@
+%Ultimatives Tool zur Datierung:
+%https://www.cc.kyoto-su.ac.jp/~yanom/pancanga/
+%skp = ignored in edition
+%skm = ignored in xml
+%%%---2-DO---%%%:
+% - add xml ids for cladistics
+% - produce diplomatic transcripts for saktumiva
+% - make extra layer in Apparatus for parallels in SVARODAYA, Siddhasiddhantapaddhati and Amanaska
+% - check all daṇḍas!!! now I think that it's more likely that many of them were lost in copies. Lectio difficilior! Very unconventional style of the autor! 
+% - read Sarvangayogapradipika, Maya Burger! 
+% - maybe add second ciritical edition of yogasvarodaya?!
+% - Korrekturlesen von \E!! 
+% - Verspattern einbauen!
+% - add all Testtimonia of SSP & Ysv
+% - Sigla alphabetisch ordnen und! daṇḍas mit einkollationieren
+% - präambel auslagern wie Jürgen 
+% - grep-search alle Verse!!!!
+% - Mss spreadsheet
+% - sort N1,D1,B2 zu N1,N2,D1
+% - sort all sigla alphabetically 
+% - additions to U2: make footnotes for the bahir mātrā-s: explaining the inventions of female deities and tell that this is "schwer interpretierbar"
+% - Belege für source und testimonia einfügen!!!
+% - GIVE UNIQUE LABELS for TESTIMONIO AND SOurces
+% - Edition mit Sätzen übereinander nennt sich: Synoptische Edition
+% - Consider changing Lakṣya to Lakṣa
+% - vEREINHEITLICHUNG von source und testium! 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Don't forget
+% Siddhasiddhantapaddhati Yogic Body descriptions are followed by Rāmacandra
+% Quotes of the Yogasvarodaya in the Yoga Karṇikā
+% Rāmacandra more a compiler than an author!!!
+% Identify quotes of YTB in Haṭhasanketacandrikā 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%MSS notes
+%
+%--B: i and ī are not differenciated
+%--P: no punctuation no daṇdas nothing
+%--U1: dot . serves as daṇḍa 
+%--\L and \U2 very similar
+%--figure out for U2: // ajapājapaḥ sahasra // 6000 //gha 0 16 pa 0 40// \U2?!?!?!?!?!?
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% Einleitung Ideen 
+% - sprachliche Simplizität
+% - Potenzial als Anfängertext
+% - Großartige Einführung in die Textkritik -> Synoptische Edition 
+% - Gelegenheit Yogasvarodaya und Yogatattvabindu zu edieren 
+% - Historische Evidenz entweder für das königliche Leben in einer Maṭha in der Nähe von Benares während der Muslimischen Herrschaft, oder sogar Lehrtext für die Bildung junger Prinzen  
+% - eines der raren Beispiele der engen Verknüfung mehrerer Texte 
+% - eines der raren Beispiele der Prosaisierung eines metrischen Textes 
+% - Anwendung rezenter Technologie! 
+% - How the text was construed -> intermingling of Ysv and SSP
+% - Martin Straube: "jeder kleine Dorfhäuptling kann Rāja genannt werden". 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Ich habe dieses Zitat gefunden
+%Franz
+%Franz Veit
+%हठयोगः [Printed book page 5-501-c]
+%हठयोगः , पुं, (हठेन योगः ।) योगविशेषः ।
+%यथा, —
+%“इदानीं हठयोगस्तु कथ्यते हठसिद्धिदः ।
+%कृत्वासनं पवनाशं शरीरे रोगहारकम् ॥
+%पूरकं कुम्भकञ्चैव रेचकं वायुना भजेत् ।
+%इत्थं क्रमोत्क्रमं ज्ञात्वा पवनं सग्धयेत् सदा ॥
+%धौत्यादिकर्म्मषट्कञ्च संस्कुर्य्याद्धठसाधकः ।
+%एतन्नाड्यान्तु देवेशि ! वायुपूर्णं प्रतिष्ठितम् ॥
+%ततो मनो निश्चलं स्यात्तत आनन्द एव हि ।
+%हठयोगान्न कालः स्यान्मनः शून्ये भवेद्यदि ॥
+%इदानीं हठयोगस्य द्वितीयं भेदवत् शृणु ।
+%आकाशे नासिकाग्रे तु सूर्य्यकोटिसमं स्मरेत् ॥
+%श्वेतं रक्तं तथा पीतं कृष्णमित्यादिरूपतः ।
+%एवं ध्यात्वा चिरायुः स्यादङ्गाजननवर्ज्जितः ॥
+%शिवतुल्यो महात्मासौ हठयोगप्रसादतः ।
+%हठाज्ज्योतिर्म्मयो भूत्वा ह्यन्तरेण शिव भवेत् ।
+%अतोऽयं हठयोगः स्यात् सिद्धिदः सिद्धसेवितः ॥”
+%इति योगस्वरोदयः ॥ [ID=41348]
+
+%Now, Haṭhayoga indeed is explained as that which gives the siddhi (accomplishment) of haṭha (persistence).
+%One performs the wind-eating/serpent āsanam, which removes illness in the body
+%and filling – kumbhaka – emptying may distribute the vāyu/wind.
+%In this way, while being aware of the progress and regress of the breath one may feed on the wind continually.
+%And with the six karmmas, dhauti etc., the Sādhaka of Haṭha may prepare/embellish himself.
+%Thus/thereby, in the channel (nāḍī), Oh supreme Goddess, all of the winds (vāyu) are consecrated/placed.
+%Then the mind may be unmoved and then bliss it really is.
+%Through Haṭhayoga time will be no more, when the mind in emptiness abides.
+%
+%Now listen to the second disclosure of haṭhayoga:
+%In space, on the tip of the nose indeed, one may remember equal to ten million suns,
+%the primal forms: white, red, likewise yellow, dark blue.
+%Thus meditating/visualizing, one may have a long life, free of the birth of the body,
+%Equal to Śiva, this great soul, due to the blessing of Haṭhayoga,
+%shall become through persistence (haṭha) a being of light and internally śiva.
+%Therefore this Haṭhayoga grants accomplishment – it’s practiced by the Siddhas (accomplished ones).
+%Franz
+%Im śabdakalpadruma
+%Franz
+%Franz Veit
+%fj.veit@gmail.com
 \chapter{Introduction}
 \mainmatter
 
