--- a/alibindulager.tex
+++ b/alibindulager.tex
@@ -1,101 +1,3 @@
-%Ultimatives Tool zur Datierung:
-%https://www.cc.kyoto-su.ac.jp/~yanom/pancanga/
-%skp = ignored in edition
-%skm = ignored in xml
-%%%---2-DO---%%%:
-% - add xml ids for cladistics
-% - produce diplomatic transcripts for saktumiva
-% - make extra layer in Apparatus for parallels in SVARODAYA, Siddhasiddhantapaddhati and Amanaska
-% - check all daṇḍas!!! now I think that it's more likely that many of them were lost in copies. Lectio difficilior! Very unconventional style of the autor! 
-% - read Sarvangayogapradipika, Maya Burger! 
-% - maybe add second ciritical edition of yogasvarodaya?!
-% - Korrekturlesen von \E!! 
-% - Verspattern einbauen!
-% - add all Testtimonia of SSP & Ysv
-% - Sigla alphabetisch ordnen und! daṇḍas mit einkollationieren
-% - präambel auslagern wie Jürgen 
-% - grep-search alle Verse!!!!
-% - Mss spreadsheet
-% - sort N1,D1,B2 zu N1,N2,D1
-% - sort all sigla alphabetically 
-% - additions to U2: make footnotes for the bahir mātrā-s: explaining the inventions of female deities and tell that this is "schwer interpretierbar"
-% - Belege für source und testimonia einfügen!!!
-% - GIVE UNIQUE LABELS for TESTIMONIO AND SOurces
-% - Edition mit Sätzen übereinander nennt sich: Synoptische Edition
-% - Consider changing Lakṣya to Lakṣa
-% - vEREINHEITLICHUNG von source und testium! 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Don't forget
-% Siddhasiddhantapaddhati Yogic Body descriptions are followed by Rāmacandra
-% Quotes of the Yogasvarodaya in the Yoga Karṇikā
-% Rāmacandra more a compiler than an author!!!
-% Identify quotes of YTB in Haṭhasanketacandrikā 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%MSS notes
-%
-%--B: i and ī are not differenciated
-%--P: no punctuation no daṇdas nothing
-%--U1: dot . serves as daṇḍa 
-%--\L and \U2 very similar
-%--figure out for U2: // ajapājapaḥ sahasra // 6000 //gha 0 16 pa 0 40// \U2?!?!?!?!?!?
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% Einleitung Ideen 
-% - sprachliche Simplizität
-% - Potenzial als Anfängertext
-% - Großartige Einführung in die Textkritik -> Synoptische Edition 
-% - Gelegenheit Yogasvarodaya und Yogatattvabindu zu edieren 
-% - Historische Evidenz entweder für das königliche Leben in einer Maṭha in der Nähe von Benares während der Muslimischen Herrschaft, oder sogar Lehrtext für die Bildung junger Prinzen  
-% - eines der raren Beispiele der engen Verknüfung mehrerer Texte 
-% - eines der raren Beispiele der Prosaisierung eines metrischen Textes 
-% - Anwendung rezenter Technologie! 
-% - How the text was construed -> intermingling of Ysv and SSP
-% - Martin Straube: "jeder kleine Dorfhäuptling kann Rāja genannt werden". 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Ich habe dieses Zitat gefunden
-%Franz
-%Franz Veit
-%हठयोगः [Printed book page 5-501-c]
-%हठयोगः , पुं, (हठेन योगः ।) योगविशेषः ।
-%यथा, —
-%“इदानीं हठयोगस्तु कथ्यते हठसिद्धिदः ।
-%कृत्वासनं पवनाशं शरीरे रोगहारकम् ॥
-%पूरकं कुम्भकञ्चैव रेचकं वायुना भजेत् ।
-%इत्थं क्रमोत्क्रमं ज्ञात्वा पवनं सग्धयेत् सदा ॥
-%धौत्यादिकर्म्मषट्कञ्च संस्कुर्य्याद्धठसाधकः ।
-%एतन्नाड्यान्तु देवेशि ! वायुपूर्णं प्रतिष्ठितम् ॥
-%ततो मनो निश्चलं स्यात्तत आनन्द एव हि ।
-%हठयोगान्न कालः स्यान्मनः शून्ये भवेद्यदि ॥
-%इदानीं हठयोगस्य द्वितीयं भेदवत् शृणु ।
-%आकाशे नासिकाग्रे तु सूर्य्यकोटिसमं स्मरेत् ॥
-%श्वेतं रक्तं तथा पीतं कृष्णमित्यादिरूपतः ।
-%एवं ध्यात्वा चिरायुः स्यादङ्गाजननवर्ज्जितः ॥
-%शिवतुल्यो महात्मासौ हठयोगप्रसादतः ।
-%हठाज्ज्योतिर्म्मयो भूत्वा ह्यन्तरेण शिव भवेत् ।
-%अतोऽयं हठयोगः स्यात् सिद्धिदः सिद्धसेवितः ॥”
-%इति योगस्वरोदयः ॥ [ID=41348]
-
-%Now, Haṭhayoga indeed is explained as that which gives the siddhi (accomplishment) of haṭha (persistence).
-%One performs the wind-eating/serpent āsanam, which removes illness in the body
-%and filling – kumbhaka – emptying may distribute the vāyu/wind.
-%In this way, while being aware of the progress and regress of the breath one may feed on the wind continually.
-%And with the six karmmas, dhauti etc., the Sādhaka of Haṭha may prepare/embellish himself.
-%Thus/thereby, in the channel (nāḍī), Oh supreme Goddess, all of the winds (vāyu) are consecrated/placed.
-%Then the mind may be unmoved and then bliss it really is.
-%Through Haṭhayoga time will be no more, when the mind in emptiness abides.
-%
-%Now listen to the second disclosure of haṭhayoga:
-%In space, on the tip of the nose indeed, one may remember equal to ten million suns,
-%the primal forms: white, red, likewise yellow, dark blue.
-%Thus meditating/visualizing, one may have a long life, free of the birth of the body,
-%Equal to Śiva, this great soul, due to the blessing of Haṭhayoga,
-%shall become through persistence (haṭha) a being of light and internally śiva.
-%Therefore this Haṭhayoga grants accomplishment – it’s practiced by the Siddhas (accomplished ones).
-%Franz
-%Im śabdakalpadruma
-%Franz
-%Franz Veit
-%fj.veit@gmail.com
 \input{preamble.tex}
 \author{Nils Jacob Liersch}
 \title{Yogatattvabindu of Rāmacandra\\ A Critical Edition and Annotated Translation}
@@ -144,8 +46,8 @@
 \vskip .4cm
 
 \Huge Yogatattvabindu \\[7mm]
-\Large Critical and Synoptic \\
-Edition with annotated Translation
+\Large Critical Edition\\
+with annotated Translation
 
 
 \large
@@ -254,29 +156,6 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 \item \Uone : SORI 1574
 \item \Utwo: SORI 6082
 \end{itemize}
-
-The order of the readings in the critical apparatus is arranged according to the quality of readings in decending order. The critical apparatus is positive. Gemitation is not recorded. 
-
-\section{Abbreviations}
-\begin{itemize}
-  \item qcr: quote cum referencia (quoted with reference)
-  \end{itemize}
-
-\section{Marking the Reliability of Sources and Testimonia in the Critical Apparatus}
-\label{kennz}
-
-To accurately depict information about the textual relationship and estimated degree of relatedness of a passage from the \textit{Yogatattvabindu} in the layers for sources and testimonia of the critical apparatus, a system of sigla was introduced.\footnote{This type of identification system is based on the use of the critical apparatus in \parencite[lii-liii]{steinkellner2005}. It was modified for the text-critical work on the \textit{Yogatattvabindu}.} The sigla are meaningful when a passage is corrupted in all witnesses and can only be reconstructed by means of other texts. The layers of the critical apparatus for sources and testimonia use the following sigla:
-
-\begin{enumerate}
-\item[\textbf{Ce}] \textit{citatum ex alio} / quotation from another (text).\footnote{The sigla \textbf{Ce} indicates an identical or largely identical content in the lesser witness and only allows for minor deviations in the wording of the passage.}
-\item[\textbf{Cee}] \textit{citatum ex alio modo edendi} / quotation from another (text) with editorial changes.\footnote{The sigla \textbf{Cee} identifies passages with noticeable deviations in the lesser witness.}
-\item[\textbf{Ci}] \textit{citatum in alio} / quotation in another (text).\footnote{The sigla \textbf{Ci} indicates an identical or largely identical content in the lesser witness and only allows for minor deviations in the wording of the passage.}
-\item[\textbf{Cie}] \textit{citatum in alio modo edendi} / quotation in another (text) with editorial changes.\footnote{The sigla \textbf{Cie} identifies passages in the lesser witness with noticeable deviations that have the intended character of the composer.}
-\item[\textbf{Re}] \textit{relatum ex alio} / (content), attested from another text.\footnote{The sigla \textbf{Re} identifies content parallels in the lesser witness that are relevant to the constitution of the critical text. It further indicates in certain cases that the composer might have used this source when composing his text.}
-\item[\textbf{Ri}] \textit{relatum in alio} / (content), attested in another text.\footnote{The sigla \textbf{Ri} identifies content parallels in the lesser witness that are relevant to the constitution of the critical text.}
-\end{enumerate}
-
-The following acronyms refer to passages that originated from texts that the author of the \textit{Yogatattvabindu} utilized in compiling his work: \textbf{Ce}, \textbf{Cee}, \textbf{Re}. These texts must predate the \textit{Yogatattvabindu}. The other acronyms, such as \textbf{Ci}, \textbf{Cie}, and \textbf{Ri}, are texts that have adopted passages from the \textit{Yogatattvabindu}, or verses or passages that share similar content with the \textit{Yogatattvabindu}, but their relation is given literally, making it impossible to determine who adopted from whom. \textbf{Re} and \textbf{Ri} each refer to passages that are so closely related in content to those of the \textit{Yogatattvabindu} that they are significant in reconstructing a passage.\footnote{\textbf{Ce} and \textbf{Cee} have the highest degree of reliability, \textbf{Ci} and \textbf{Cie} have a moderate degree, and \textbf{Re} and \textbf{Ri} have the lowest.}
 
 
 \chapter{Critical Edition \& Annotated Translation}
@@ -8701,10 +8580,8 @@ sūkṣmarūpeṇa tiṣṭaṃti\dd{}\linelabel{_165e}
     \ekddiv{type=trans}
     \begin{tlate}
  \centerline{\textrm{\small{[\uproman{26}. The 10 Channels]}}}
- \bigskip
- \noindent
-\blfootnote{\ldots the practice bestows \textit{siddhi}s. Even though not directly introduced as a practice, the unknown author of the \textit{Yogasvarodaya} also informs the reader about the \textit{siddhi}-bestowing nature of the channels without any practical instructions (idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam). It seems that in the \textit{Yogasvarodaya}, the ten channels are possibly  part of the practice of Antaralakṣya, too. However, this is not directly expressed. Rather they are presented in textbook style to inform about their existance, in the same way, the \citetitle{ssplonavla} 1.66 presents them. } Now, the divisions of channels within the body are explained.\footnote{Networks of channels are standard in many systems of yoga. The earliest known mention refers to Upaniṣadic literature, such as the \citetitle{brhadaranyaka} 2.1.19. For a detailed depiction of systems of channels in yogic literature, see \citeauthor[2017: 172-174, 184-198]{rootsofyoga2017}.} There are ten primary channels.\footnote{The notion of ten primary channels can already be found in early texts of Haṭhayoga, e.g., the \citetitle{vivekamartandaolda} 17 (Central Library, Baroda Acc. No. 4110, 1534 Saṃvat): \begin{quote} \textit{teṣu nāḍisahasreṣu dvisaptatir udāhṛtāḥ }|\\
-\textit{pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ} || \end{quote} ``Of those thousand channels, seventy-two have been spoken of, and among them, ten are considered most important. They are the main pathways of the vital breaths.''\\ Also cf. \citetitle{fausta1976} 34. However, the enumeration of ten main channels in yogic literature also has predecessors, e.g., in Śaivasiddhānta, cf. \citetitle{sardha} 10.4-5. Other systems, e.g., \citetitle{yajnavalkya} \uproman{4}.26 or \citetitle{vasisthasamhita} 2.21, enumerate fourteen primary channels.} Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. The Suṣumṇā flows by the path of the sun\footnote{In several yogic traditions the microcosmic sun of yogic bodies is situated at the base of the central channel (cf. \citetitle{asiddhi} 4.1) and travels upwards (cf. \citetitle{asiddhi} 4.11).} to the door of Brahma.\footnote{The \textit{brahmadvāra} is a synonym for the \textit{brahmarandhra}, ``The aperture of Brahmā/Brahman''; the fontanelle, through which the vital principle of the yogi exists at death, cf. \citeauthor[2017:438]{rootsofyoga2017}} The Sarasvatī[-channel] exists at the center of the face. The two rivers, Gāndhārī and Hastjihvā, exist within the two ears. The two rivers, Pūṣā and Ālaṃbuṣā, are situated at the center of the two eyes. Śaṃkhinī stretches from the beginning of the opening of the gender through the Iḍā-channel up to the place of Brahmā/Brahman\footnote{The \textit{brahmasthāna} is a synonym for \textit{brahmarandhra}. Cf. \citetitle{dhyanabind} 65. Here the \textit{brahmasthāna} is equated with the \textit{sahasrāracakra}.}. Kuhū stretches from the entrance of the root\footnote{The entrance of the root (\textit{mūladvāra}) in this passage refers to the anus, cf. \citetitle{ssplonavla} 1.66 (\textit{kuhūr gudadvāre vahati}) ``Kuhū conducts through the anus''.} through the Piṅgalā-channel up to the place of Brahmā/Brahman. In such a way, the channels are situated at the ten openings. The other channels, measured as 72000, are situated with a subtle form at the roots of the hairs.
+ \smallskip
+\blfootnote{\ldots the practice bestows \textit{siddhi}s. Even though not directly introduced as a practice, the unknown author of the \textit{Yogasvarodaya} also informs the reader about the \textit{siddhi}-bestowing nature of the channels without any practical instructions (idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam). It seems that in the \textit{Yogasvarodaya}, the ten channels are possibly  part of the practice of Antaralakṣya, too. However, this is not directly expressed. Rather they are presented in textbook style to inform about their existance, in the same way, the \citetitle{ssplonavla} 1.66 presents them. } Now, the divisions of channels within the body are explained.\footnote{Networks of channels are standard in many systems of yoga. The earliest known mention refers to Upaniṣadic literature, such as the \citetitle{brhadaranyaka} 2.1.19. For a detailed depiction of systems of channels in yogic literature, see \citeauthor[2017: 172-174, 184-198]{rootsofyoga2017}.} There are ten primary channels.\footnote{The notion of ten primary channels can already be found in early texts of Haṭhayoga, e.g., the \citetitle{vivekamartandaolda} 17 (Central Library, Baroda Acc. No. 4110, 1534 Saṃvat): (\textit{teṣu nāḍisahasreṣu dvisaptatir udāhṛtāḥ }| \textit{pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ} ||) ``Of those thousand channels, seventy-two have been spoken of, and among them, ten are considered most important. They are the main pathways of the vital breaths.''\\ Also cf. \citetitle{fausta1976} 34. However, the enumeration of ten main channels in yogic literature also has predecessors, e.g., in Śaivasiddhānta, cf. \citetitle{sardha} 10.4-5. Other systems, e.g., \citetitle{yajnavalkya} \uproman{4}.26 or \citetitle{vasisthasamhita} 2.21, enumerate fourteen primary channels.} Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. The Suṣumṇā flows by the path of the sun\footnote{In several yogic traditions the microcosmic sun of yogic bodies is situated at the base of the central channel (cf. \citetitle{asiddhi} 4.1) and travels upwards (cf. \citetitle{asiddhi} 4.11).} to the door of Brahma.\footnote{The \textit{brahmadvāra} is a synonym for the \textit{brahmarandhra}, ``The aperture of Brahmā/Brahman''; the fontanelle, through which the vital principle of the yogi exists at death, cf. \citeauthor[2017:438]{rootsofyoga2017}} The Sarasvatī[-channel] exists at the center of the face. The two rivers, Gāndhārī and Hastjihvā, exist within the two ears. The two rivers, Pūṣā and Ālaṃbuṣā, are situated at the center of the two eyes. Śaṃkhinī stretches from the beginning of the opening of the gender through the Iḍā-channel up to the place of Brahmā/Brahman\footnote{The \textit{brahmasthāna} is a synonym for \textit{brahmarandhra}. Cf. \citetitle{dhyanabind} 65. Here the \textit{brahmasthāna} is equated with the \textit{sahasrāracakra}.}. Kuhū stretches from the entrance of the root\footnote{The entrance of the root (\textit{mūladvāra}) in this passage refers to the anus, cf. \citetitle{ssplonavla} 1.66 (\textit{kuhūr gudadvāre vahati}) ``Kuhū conducts through the anus''.} through the Piṅgalā-channel up to the place of Brahmā/Brahman. In such a way, the channels are situated at the ten openings. The other channels, measured as 72000, are situated with a subtle form at the roots of the hairs.
 \end{tlate}
   \end{translation}
 \end{alignment}
@@ -17360,7 +17237,6 @@ jñānam-utpadyate/}
 %-----------------------------14-16
 \note[type=source, labelb=381, labele=_381e, nosep]{cf. SSP 1.54 (Ed. p. 18): icchā kriyā māyā prakṛtir vāg iti vyaktaśaktipañcakam |}
 \note[type=source, labelb=382, labele=_381e, nosep]{cf. YSv (PT p. 847): prakṛtīcchā kriyā māyā vacaḥ pañca guṇā iti |}
-\note[type=philcomm, labelb=382, labele=_381e, lem={icchā \ldots vācā}]{The SSP 1.54 associates the five final qualities on this page as qualities of the upper category of \textit{vyaktaśakti}. Each item of these five qualities has five sub-qualities. This results in a total of twenty-five qualities of \textit{vyaktaśakti}. Here, however, the term \textit{vyaktaśakti} was probably lost in transmission and is not reflected in any of the \textit{Yogatattvabindu}'s witnesses.}
 \app{\lem[wit={ceteri}]{icchā}
   \rdg[wit={N1}]{icchāyāḥ}
   \rdg[wit={E}]{\om}}\dd{}
@@ -17398,7 +17274,7 @@ Furthermore, the qualities of time are: inciting, arranging, moving around, negl
 
 The qualities of the living soul are: the state of waking, the state of sleeping, the state of deep sleep, [and the] state of liberation.
 
-\crazy{Furthermore such unique knowledge is generated}: desire, action, illusion, nature, speech.\footnote{In the sources these qualities are associated with \textit{vyaktaśakti} which is the manifested form of the universal energy.}
+\crazy{Furthermore such unique knowledge is generated}: desire, action, illusion, nature, speech.\footnote{The SSP 1.54 associates the five final qualities on this page as qualities of the upper category of \textit{vyaktaśakti}. Each item of these five qualities has five sub-qualities. This results in a total of twenty-five qualities of \textit{vyaktaśakti}. Here, however, the term \textit{vyaktaśakti} was probably lost in transmission and is not reflected in any of the \textit{Yogatattvabindu}'s witnesses.}
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -20494,7 +20370,7 @@ etādṛśaḥ \app{\lem[wit={ceteri},alt={kaścin niyamaḥ}]{kaścin\skp{-}niy
   \rdg[wit={U2}]{kaścin nīyamaḥ}}
 siddhasya
 \app{\lem[type=emendation, resp=egoscrconj]{soktaḥ}
-  \rdg[wit={ceteti}]{noktaḥ}} 
+  \rdg[wit={ceteri}]{noktaḥ}} 
 noktaḥ/
 %-----------------------------
 %manaḥpavanābhyāṃ  yadā sahajānaṃda----svasvarūpeṇa prakāśyate   sa sahajayogaḥ   kathyate/ \E
@@ -20580,7 +20456,6 @@ Thus concludes the \textit{Yogatattvabindu}, composed by Srī Ramachandra Parama
     \end{tlate}
   \end{translation}
 \end{alignment}
-
 \chapter{Appendix}
 \section{Figures}
 
