a lot of updates - added annotation fro heart lotus changed all headings to sanskrit in edition!

--- a/bindu.bib
+++ b/bindu.bib
@@ -415,6 +415,20 @@ keywords={printsource},
  keywords={seclit},
  }
 
+@article{törzsök2022,
+ title={Religions de l’Inde : études shivaïtes}, 
+ subtitle={Annuaire de l'École pratique des hautes études (EPHE), Résumé des conférences et travaux},
+ note={mis en ligne le 03 juin 2022, consulté le 07 juillet 2022.},
+ journal={Section des sciences religieuses [En ligne]}, 
+ volume={129}, 
+ author= {Törzsök, Judith},
+ pages={117-124},
+ year={2022},
+ publisher={openedition.org},
+ url={https://link.springer.com/article/10.1007/s10781-019-09401-5},
+ keywords={seclit},
+ }
+
 @book{hanneder2006,
  title={Studies on the Mokṣopaya}, 
  author={Hanneder, Jürgen},
@@ -1656,6 +1670,21 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={printsource},
 }
 
+@book{upanishads,
+  title={The Early Upanishads}, 
+  author={Olivelle, Patrick}, 
+  publisher={Oxford University Press}, 
+  year={2014}, 
+  keywords={printsource}, 
+} 
+
+@book{chandogya,
+   title={Chāndogya-Upaniṣad},
+   note={see The Early Upanishads},
+   pages={166-169}, 
+   keywords={printsource},
+}
+
 @book{yogakundalinyopanisad,
    title={Yogakuṇḍalinyopaniṣad},
    note={see Yoga Upaniṣads}, 
@@ -1797,6 +1826,15 @@ address={Delhi},
    keywords={printsource},
 }
 
+@book{triadicheart,
+   title={The Triadic Heart of Śiva, Kaula Tantrism of Abhinavagupta in the non-dual Shaivism of Kashmir},
+   author={Muller-Ortega, Paul Eduardo},
+   year={1989},
+   publisher={State University of New York Press},
+   note={Studie zum bei Abhinavagupta zentralen Symbol des "Herzens" v.a. auf Basis von Parātriśikā Laghuvṛtti; der Anhang enthält die erste englische Übersetzung des kurzen Textes.},
+   address={New York},
+   keywords={printsource},
+}
 
 @book{mahabharata,
    title={The Mahābhārata: For the first time Critically Edited, 19 Volumes},
