--- a/voredition.tex
+++ b/voredition.tex
@@ -5,31 +5,18 @@
 %%%---2-DO---%%%:
 % - add xml ids for cladistics
 % - produce diplomatic transcripts for saktumiva
-% - make extra layer in Apparatus for parallels in SVARODAYA, Siddhasiddhantapaddhati and Amanaska
-% - check all daṇḍas!!! now I think that it's more likely that many of them were lost in copies. Lectio difficilior! Very unconventional style of the autor! 
 % - read Sarvangayogapradipika, Maya Burger! 
 % - maybe add second ciritical edition of yogasvarodaya?!
-% - Korrekturlesen von \E!! 
-% - Verspattern einbauen!
-% - add all Testtimonia of SSP & Ysv
-% - Sigla alphabetisch ordnen und! daṇḍas mit einkollationieren
-% - präambel auslagern wie Jürgen 
 % - grep-search alle Verse!!!!
 % - Mss spreadsheet
-% - sort N1,D1,B2 zu N1,N2,D1
-% - sort all sigla alphabetically 
 % - additions to U2: make footnotes for the bahir mātrā-s: explaining the inventions of female deities and tell that this is "schwer interpretierbar"
-% - Belege für source und testimonia einfügen!!!
-% - GIVE UNIQUE LABELS for TESTIMONIO AND SOurces
-% - Edition mit Sätzen übereinander nennt sich: Synoptische Edition
 % - Consider changing Lakṣya to Lakṣa
-% - vEREINHEITLICHUNG von source und testium! 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Don't forget
 % Siddhasiddhantapaddhati Yogic Body descriptions are followed by Rāmacandra
 % Quotes of the Yogasvarodaya in the Yoga Karṇikā
 % Rāmacandra more a compiler than an author!!!
-% Identify quotes of YTB in Haṭhasanketacandrikā 
+% Identify quotes of YTB in Haṭhasanketacandrikā -- done :D
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %MSS notes
 %
