--- a/bindu.bib
+++ b/bindu.bib
@@ -1300,6 +1300,18 @@ address={Pondicherry},
  keywords= {seclit},
 }
 
+@article{sandersonshaivaexe,
+author= {Sanderson, Alexis}, 
+journal= {Mélanges tantriques à la mémoire d’Hélène Brunner / Tantric Studies in Memory of Hélène Brunner}, 
+editor= {Goodall, Dominic and Padoux André}, 
+year={2007}, 
+title={Śaiva Exegesis of Kashmir}, 
+publisher={Institut français d'Indologie/ École française d’Extrême-Orient}, 
+volume={Collection Indologie 106}, 
+pages={231-442 and (bibliography) pp. 551-582},
+address={Pondicherry},
+keywords={seclit},
+}
 
 @codex{codexbmt,
    title={Brahmayāmalatantra},  
@@ -1309,11 +1321,38 @@ address={Pondicherry},
    keywords={codex},
 }
 
+
+
 @codex{vivekamartandaolda,
    title={Vivekamārtaṇḍa},  
    author={Gorakṣa},
    address={Central Library, Baroda},
    note={Acc. No. 4110},
+   keywords={codex},
+}
+
+
+@codex{hathasamketacandrikajodhpur,
+   title={Haṭhasaṃketacandrikā},  
+   author={Sundaradeva},
+   address={Man Singh Pustak Prakash Library Jodhpur},
+   note={Ms. No. 2244},
+   keywords={codex},
+}
+
+@codex{hathasamketacandrikamysore,
+   title={Haṭhasaṃketacandrikā},  
+   author={Sundaradeva},
+   address={Oriental Research Institute, University of Mysore},
+   note={Ms. No. B220},
+   keywords={codex},
+}
+
+@codex{hathasamketacandrikachennai,
+   title={Haṭhasaṃketacandrikā},  
+   author={Sundaradeva},
+   address={Government Oriental Manuscript Library, Chennai},
+   note={Ms. No. R3239},
    keywords={codex},
 }
 
@@ -1357,6 +1396,16 @@ address={Pondicherry},
   volume={5},
   address={Petersburg},
   keywords={seclit},
+}
+
+@book{shabdakalpadruma, 
+ title={Śabdakalpadruma}, 
+ author={Radhakanta, Deva and Varadaprasada, Vasu and Haricana, Vasu}, 
+ year={1967}, 
+ address={Varanasi}, 
+ publisher={Varanasi Caukhamba Samskrita Sirija Aphisa}, 
+ keywords={seclit}, 
+ volume={5}, 
 }
 
 @book{yogatarangini,
