--- a/preamble.tex
+++ b/preamble.tex
@@ -4,10 +4,10 @@
 \settypeblocksize{170mm}{116mm}{*}	
 \setlrmargins{18mm}{*}{*}
 \setulmargins{*}{*}{1.2}
-%\setlength{\headheight}{5pt}
+%\setlength{\headheight}{5pt}%
 \checkandfixthelayout[lines]
 \linespread{1.16}
-% \flushbottom
+\flushbottom
 
 %%% Hyphenation settings
 \usepackage[htt]{hyphenat}
@@ -97,7 +97,7 @@
 %%% ekdosis
 \usepackage[teiexport=tidy,parnotes=true]{ekdosis}% =tidy cleans up HTML and XML documents by fixing markup errors and upgrading legacy code to modern standards. parnotes=footnotes below or above critical apparatus
 
-\SetLineation{lineation=page} %lineation=page sets thenumbering to start afresh at the top of each page. =modulo makes every fifth line numbered. 
+\SetLineation{lineation=page, modulo} %lineation=page sets thenumbering to start afresh at the top of each page. =modulo makes every fifth line numbered. {lineation=page} makes every line numbered! 
 
 \renewcommand{\linenumberfont}{\selectlanguage{english}\footnotesize} %sets language of lines to English
 
@@ -167,12 +167,13 @@ hpbmk = \textcolor{red}{hpb}
 %\usepackage{fnpos}
 %\makeFNmid
 %\makeFNbottom
-
+\usepackage[bottom]{footmisc}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \makeatletter
 \def\blfootnote{\gdef\@thefnmark{}\@footnotetext}
 \makeatother
 %%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 % Macros and Definitions for the Print of Sigla
 \def\acpc#1#2#3{{#1}\rlap{\textrm{\textsuperscript{#3}}}\textsubscript{\textrm{#2}}\space}
